# settlement-ramp

./: .env.example  .gitignore  .gitmodules  README.md  TODO.md  foundry.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
backend/: README.md  requirements.txt
backend/src/: config.py  main.py
backend/src/services/: blockchain_service.py  chainsettle.py  paypal_service.py
backend/src/utils/: error_handler.py  helpers.py
backend/tests/: test_paypal_service.py
contracts/: .env.example  foundry.toml  remappings.txt  soldeer.toml
contracts/broadcast/Deploy.s.sol/84532/: run-1747457753.json  run-1747458112.json  run-1747459303.json  run-1747459954.json  run-latest.json
contracts/script/: Deploy.s.sol
contracts/src/: Ownable.sol  ReentrancyGuard.sol  SettlementRamp.sol
contracts/src/interfaces/: AutomationCompatibleInterface.sol
contracts/test/: SettlementRamp.t.sol
frontend/: index.html  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css  main.tsx  wagmi.ts
frontend/src/components/: features-section.tsx  hero-section.tsx  settlement-ramp.tsx  theme-provider.tsx  theme-toggle.tsx  wagmi-provider.tsx
frontend/src/components/payment-flow/: amount-input.tsx  confirmation.tsx  index.tsx  paypal-connect.tsx  steps.tsx  wallet-input.tsx
frontend/src/components/transaction-status/: index.tsx  transaction-receipt.tsx
frontend/src/lib/: constants.ts  formatters.ts
middleware/: main.py  package.json  pyproject.toml
middleware/scripts/: dev.sh
scripts/: DeploySettlementRamp.s.sol
(+5 files in other folders)
